[package]
name = "thesis_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
rand_distr = "0.4.3"
ndarray-rand = "0.14.0"
ndarray = "0.15.6"
druid = "0.8.3"
druid-widget-nursery = "0.1.0"
